updated angularjs to lastest version 1.8.3 and amend several project definitions and configurations affairs🥴

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-      "module": "commonjs",
       "lib": ["ES6","DOM"],
       "target": "ES5",
       "rootDir": "ts",
@@ -11,5 +10,5 @@
       "noFallthroughCasesInSwitch": true,
       "noImplicitAny": true,
   },
-  "include": ["ts/**/*"]
+  "include": ["ts/*"]
 }
